Fix funding logos on mobile
It is still bad because wide logo overflow instead of shrinking, but it is better.

Forgotten stylesheet update.

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -9789,6 +9789,12 @@ article {
 
 .flex {
   display: flex; }
+.flex--small-wrap {
+  flex-wrap: wrap; }
+@media (min-width: 576px) {
+  .flex--small-wrap {
+    flex-wrap: nowrap; }
+}
 
 .block {
   display: block; }
